--- a/RazorPages_PizzaStore/Pages/Shared/_Layout.cshtml
+++ b/RazorPages_PizzaStore/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">RazorPages_PizzaStore</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Evdi Pizza Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,8 +23,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/PizzaSale">Pizzas</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/OrdersList">Orders</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -38,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - RazorPages_PizzaStore - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - WebRazorTest - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
